# null-step-sequencer

./: .gitignore  CMakeLists.txt  README.md  build.sh
Source/: PluginEditor.cpp  PluginEditor.cpp.backup  PluginEditor.h  PluginEditor.h.bak  PluginProcessor.cpp  PluginProcessor.h
